# internship-task-virose

./: CMakeLists.txt  Test.cpp  config.json
XL/motion_movie/: 36.json  38.json  39.json  40.json  41.json  43.json  44.json  45.json  46.json  48.json  49.json  50.json  51.json  53.json  54.json  55.json  56.json  58.json  59.json  60.json  61.json
XL/motion_unit/: 1.json  135.json  136.json  137.json  138.json  140.json  141.json  142.json  143.json  145.json  146.json  147.json  148.json  150.json  151.json  152.json  153.json  155.json  156.json  157.json  158.json
task-1/Bahasa Dengklek/: Bahasa Dengklek.cpp
task-1/Bunga Gabungan/: Bunga Gabungan.cpp
task-2/: CMakeLists.txt  config.json  launch.json
task-2/XL/motion_movie/: 36.json  38.json  39.json  40.json  41.json  43.json  44.json  45.json  46.json  48.json  49.json  50.json  51.json  53.json  54.json  55.json  56.json  58.json  59.json  60.json  61.json
task-2/XL/motion_unit/: 1.json  135.json  136.json  137.json  138.json  140.json  141.json  142.json  143.json  145.json  146.json  147.json  148.json  150.json  151.json  152.json  153.json  155.json  156.json  157.json  158.json
task-3/: README.md
task-3/Sapa Menyapa ESP-NOW/src/: main.cpp  utility.cpp
task-4/: README.md
task-4/try task-4/EspBridge/src/: EspBridge.h  main.cpp
task-4/try task-4/EspReceiver/src/: EspReceiver.h  main.cpp
task-4/try task-4/Laptop/: CMakeLists.txt
task-4/try task-4/Laptop/data/: data.json
task-4/try task-4/Laptop/src/: Laptop.cpp  Laptop.h  main.cpp
